5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1668_1394.log
== TEST (2019-04-15 19:10:51) 
-- CODE:
valor1=int(input("horas do prof:"))
valor2=int(inpt("quantidade de horas:"))
x=(valor1+valor2)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=int(inpt("quantidade de horas:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:06) 
-- CODE:
valor1=int(input("horas do prof:"))
valor2=int(inpt("quantidade de horas:"))
x=(valor1+valor2)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=int(inpt("quantidade de horas:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:15) 
-- CODE:
valor1=int(input("horas do prof:"))
valor2=int(inpt("quantidade de horas:"))
x=(valor1+valor2)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=int(inpt("quantidade de horas:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:32) 
-- CODE:
valor1=int(input("horas do prof:"))
valor2=int(inpt("quantidade de horas:"))
x=(valor1+valor2)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=int(inpt("quantidade de horas:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:03) 
-- CODE:
valor1=float(input("horas do prof:"))
valor2=float(inpt("quantidade de horas:"))
x=(valor1+valor2)
print(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(inpt("quantidade de horas:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:00) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(inpt("20 ou mais:"))
x=(20*50+20*50+70)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(inpt("20 ou mais:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:13) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(inpt("20 ou mais:"))
x=(20*50+20*50+70)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(inpt("20 ou mais:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:17:49) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(inpt("20 ou mais:"))
if(valor*50):
	print(20 horas ou menos)
else:(valor*50)
	print(20 horas a mais)
-- ERROR:
File "XXXX", line 4
    print(20 horas ou menos)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:18:31) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(inpt("20 ou mais:"))
if(valor*50):
	mensagem(20 horas ou menos)
else:(valor*50)
	mensagem(20 horas a mais)
	print
-- ERROR:
File "XXXX", line 4
    mensagem(20 horas ou menos)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:19:29) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(inpt("20 ou mais:"))
if(valor*50):
	mensagem(quantidade de horas mais)
else:(valor*50)
	mensagem(quantidade de horas a menos)
	print()
-- ERROR:
File "XXXX", line 4
    mensagem(quantidade de horas mais)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:19:37) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(inpt("20 ou mais:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(inpt("20 ou mais:"))
NameError: name 'inpt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:16) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(input("20 ou mais:"))
valor3=float(input("horas excedente"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:27:33) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(input("20 ou mais:"))
valor3=float(input("horas excedente"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- EXECUTION TIME:
0.131163
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1394/main.py", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:39) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(input("20 ou mais:"))
valor3=float(input("horas excedente"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:00) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(input("20 ou mais:"))
valor3=float(input("horas excedente"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:13) 
-- CODE:
valor1=float(input("20 ou menos:"))
valor2=float(input("20 ou mais:"))
valor3=float(input("horas excedente"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:33) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:46) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:04) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:47) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:04) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:36:07) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- EXECUTION TIME:
0.170406
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1394/main.py", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:12) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:40:18) 
-- CODE:
valor1=float(input("quantidade de horas?::"))
valor2=float(input("quantidades de horas?:"))
valor3=float(input("quantidades de horas?:"))
x=(valor1*valor2+valor3)
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:17) 
-- CODE:
valor1=float(input())
diferenciar=(quantidades - 20)
if quantidades < = 20:
	print(50*quantidade)
else if quantidade de > 20:
	print(20*50+diferencia*70)

-- ERROR:
File "XXXX", line 3
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:45:30) 
-- CODE:
valor1=float(input())
diferenciar=quantidades - 20
if quantidades < = 20:
	print(50*quantidade)
else if quantidade de > 20:
	print(20*50+diferencia*70)

-- ERROR:
File "XXXX", line 3
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:47:39) 
-- CODE:
valor1=float(input())
diferenciar=quantidades - 20
salario1=50*quantidade
salario=round(salario,2)
if quantidades < = 20:
	print(salario2)
else if quantidade de > 20:
	print(salario4)

-- ERROR:
File "XXXX", line 5
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:52:43) 
-- CODE:
valor1=float(input())
diferencia=quantidades - 20
salario1=50*quantidade
salario2=round(salario,2)
salario3=(20*50)+(diferencia70)
salario4=(round(salario,3))
if quantidades < = 20:
	print(salario2)
else if quantidade de > 20:
	print(salario4)

-- EXECUTION TIME:
0.186233
-- ERROR:
  File "/home/codebench/codes/1668/1394/main.py", line 7
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:45) 
-- CODE:
valor1=float(input())
diferencia=quantidades - 20
salario1=50*quantidade
salario2=round(salario,2)
salario3=(20*50)+(diferencia70)
salario4=(round(salario,3))
if quantidades < = 20:
	print(salario2)
else if quantidade de > 20:
	print(salario4)

-- ERROR:
File "XXXX", line 7
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:44) 
-- CODE:
valor1=float(input())
diferencia=(quantidades - 20)

salario1=50*quantidade
salario2=round(salario,2)

salario3=(20*50)+(diferencia70)
salario4=(round(salario,3))

if quantidades < = 20:
	print(salario2)
else if quantidade de > 20:
	print(salario4)

-- ERROR:
File "XXXX", line 10
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:23) 
-- CODE:
quantidade=float(input())
diferencia=(quantidades - 20)

salario1=50*quantidade
salario2=round(salario,2)

salario3=(20*50)+(diferencia70)
salario4=(round(salario,3))

if quantidades < = 20:
	print(salario2)
else if quantidade de > 20:
	print(salario4)

-- ERROR:
File "XXXX", line 10
    if quantidades < = 20:
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
